ingress/cart-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-ingress
  annotations:
    konghq.com/plugins: request-id
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - http:
      paths:
      - path: /carts
        pathType: Prefix
        backend:
          service:
            name: cart-service
            port:
              number: 3033
